Fixed issue with CSS overflow

--- a/public/sass/components/pagination.scss
+++ b/public/sass/components/pagination.scss
@@ -13,7 +13,6 @@ $padding: 10px;
 
     @media screen and (max-width: $break-small) {
       width: 100%;
-      height: $mobile-height;
     }
 
     > li {
